--- a/css/main.css
+++ b/css/main.css
@@ -55,8 +55,13 @@ div#info {
 margin: 0 0 20px 0;
 }
 
+div#queryExplanation{
+  color: #ddd;
+  margin: 0 10px 0 0;
+}
+
 div#results {
-max-height: 300px;
+/*max-height: 300px;*/
 margin: 0 0 1em 0;
 overflow-y: auto;
 }
@@ -85,6 +90,7 @@ div.video div.videoRating {
 color: #666;
 font-size: 10pt;
 margin: 0 0 0.4em 0;
+clear: left;
 }
 
 div.video div.videoViewCount {
@@ -103,9 +109,11 @@ padding: 0 0 0 16px;
 }
 
 div.video div.videoSummary {
-color: #ccc;
-font-size: 10pt;
-margin: 0 0 0.4em 0;
+color: #ddd;
+font-size: 11pt;
+margin: 0 0 5px 0;
+line-height: 1.3em;
+padding: 4px 0 0 0;
 }
 
 div.video div.videoTitle {
@@ -142,19 +150,20 @@ img {
 border: none;
 }
 
+img.videoThumbnail {
+border: 1px solid #444;
+float: left;
+height: 180px;
+margin: 9px 10px 10px 0;
+width: 240px;
+}
+
 input#query {
 font-family: Arial, sans-serif;
 font-size: 14pt;
 padding: 5px;
-width: 360px;
-}
-
-label[for=query]{
-  color: white;
-  display: block;
-  float: left;
-  margin: 0 10px 0 0;
-  padding: 10px 0 0 0;
+width: 627px;
+margin:  0 0 10px 0;
 }
 
 p {
@@ -205,7 +214,7 @@ outline: none;
 }
 
 summary.videoTitle {
-margin: 0 0 0.3em 0;
+margin: 0 0 12px 0;
 padding: 0 0 0 18px;
 text-indent: -18px;
 line-height: 1.2em;
